@@ -1,3 +1,8 @@
+2013-12-01  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mmg: new feature: implemented drag & drop in the chapter
+        editor. Implements #929.
+
 2013-11-24  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: bug fix: fixed an assertion in wxLogMessage() due to wrong
